update image-width in the badges and avatar

--- a/documentation.html
+++ b/documentation.html
@@ -147,16 +147,16 @@
                         <div class="componet-item">
                             <div class="component-display-container">
                                 <div class="avatar avatar-lg-size flex-items">
-                                    <img class="image-responsive image-round" src='../Assests/Images/avatar.jpg' alt="avatar" />
+                                    <img class="image-responsive image-round image-lg" src='../Assests/Images/avatar.jpg' alt="avatar" />
                                 </div>
                                 <div class="avatar avatar-md-size flex-items">
-                                    <img class="image-responsive image-round" src='../Assests/Images/avatar1.jpg'  alt="avatar" />
+                                    <img class="image-responsive image-round image-md" src='../Assests/Images/avatar1.jpg'  alt="avatar" />
                                 </div>
                                 <div class="avatar avatar-sm-size flex-items">
-                                    <img class="image-responsive image-round" src='../Assests/Images/avatar.jpg'  alt="avatar" />
+                                    <img class="image-responsive image-round image-sm" src='../Assests/Images/avatar.jpg'  alt="avatar" />
                                 </div>
-                                <div class="avatar avatar-xs-size flex-items">
-                                    <img class="image-responsive image-round" src='../Assests/Images/avatar1.jpg'  alt="avatar" />
+                                <div class="avatar avatar-xs-size flex-items ">
+                                    <img class="image-responsive image-round image-xs" src='../Assests/Images/avatar1.jpg'  alt="avatar" />
                                 </div>
                             </div>
                             <div class="component-display-container">
@@ -193,7 +193,7 @@
                                 <div class="flex-items">
                                     <div class="badge-container">
                                         <div class="avatar avatar-lg-size">
-                                            <img class="reponsive-image image-round" src="../Assests/Images/avatar.jpg" alt="">
+                                            <img class="reponsive-image image-round image-lg" src="../Assests/Images/avatar.jpg" alt="">
                                         </div>
                                         <span class="status-badge status-badge-online">
                                         </span>
@@ -202,7 +202,7 @@
                                 <div class="flex-items">
                                     <div class="badge-container">
                                         <div class="avatar avatar-md-size">
-                                            <img class="reponsive-image image-round" src="../Assests/Images/avatar1.jpg" alt="">
+                                            <img class="reponsive-image image-round image-md" src="../Assests/Images/avatar1.jpg" alt="">
                                         </div>
                                         <span class="status-badge status-badge-offline">
                                         </span>
@@ -211,7 +211,7 @@
                                 <div class="flex-items">
                                     <div class="badge-container">
                                         <div class="avatar avatar-sm-size">
-                                            <img class="reponsive-image image-round" src="../Assests/Images/avatar.jpg" alt="">
+                                            <img class="reponsive-image image-round image-sm" src="../Assests/Images/avatar.jpg" alt="">
                                         </div>
                                         <span class="status-badge status-badge-away">
                                         </span>
@@ -220,7 +220,7 @@
                                 <div class="flex-items">
                                     <div class="badge-container">
                                         <div class="avatar avatar-xs-size">
-                                            <img loading ='lazy' class="reponsive-image image-round" src="../Assests/Images/avatar1.jpg" alt="">
+                                            <img loading ='lazy' class="reponsive-image image-round image-xs" src="../Assests/Images/avatar1.jpg" alt="">
                                         </div>
                                         <span class="status-badge status-badge-online-xs">
                                         </span>
