--- a/documentation.html
+++ b/documentation.html
@@ -316,10 +316,10 @@
                                 </a>
                             </div>
                             <div class="button-container1">
-                                <a href="#" class="btn flex-items btn-addition">
+                                <a href="#" class="btn-radio flex-items btn-addition">
                                     <i class="fas fa-plus btn-add"></i> 
                                 </a>
-                                <a href="#" class="btn flex-items btn-subtraction">
+                                <a href="#" class="btn-radio flex-items btn-subtraction">
                                     <i class="fas fa-minus btn-minus"></i> 
                                 </a>
                             </div>
