Updating header logo property

--- a/documentation.html
+++ b/documentation.html
@@ -13,7 +13,7 @@
 				<div class="container">
 					<div class="container-header">
 						<ul class="ul-tag-header">
-							<li class="li-tag-header">
+							<li class="li-tag-header header-logo">
 								<a class="a-tag-header" href="./">
 									<label class="label-header-name">Quick UI</label>
 								</a>
