changing in the image tag and some imporve in css

--- a/documentation.html
+++ b/documentation.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="icon" href="./Assests/componet-icon.png" />
 		<link rel="stylesheet" href="documentation.css" />
 		<title>Documentation CSS</title>
 	</head>
@@ -125,7 +126,7 @@
 								<div class="code-snipet">
 									<code>
 										<iframe
-											src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=one-light&wt=none&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Clink%2520rel%253D%2522stylesheet%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2522href%253D%2522https%253A%252F%252Fneog-component-library.netlify.app%252Fdocumentation.css%2522%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%252F%253E%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520"
+											src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=one-light&wt=none&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Clink%2520rel%253D%2522stylesheet%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2522href%253D%2522https%253A%252F%252Fneog-component-library.netlify.app%252FComponent%252Fv1-docs.css%2522%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%252F%253E%2520"
 											style="border: 0; transform: scale(1); overflow: hidden"
 											sandbox="allow-scripts allow-same-origin"
 										>
@@ -196,6 +197,7 @@
 										<img
 											class="image-responsive image-round image-lg"
 											src="../Assests/Images/avatar.jpg"
+											loading="lazy"
 											alt="avatar"
 										/>
 									</div>
@@ -203,6 +205,7 @@
 										<img
 											class="image-responsive image-round image-md"
 											src="../Assests/Images/avatar1.jpg"
+											loading="lazy"
 											alt="avatar"
 										/>
 									</div>
@@ -210,6 +213,7 @@
 										<img
 											class="image-responsive image-round image-sm"
 											src="../Assests/Images/avatar.jpg"
+											loading="lazy"
 											alt="avatar"
 										/>
 									</div>
@@ -217,6 +221,7 @@
 										<img
 											class="image-responsive image-round image-xs"
 											src="../Assests/Images/avatar1.jpg"
+											loading="lazy"
 											alt="avatar"
 										/>
 									</div>
@@ -259,7 +264,8 @@
 												<img
 													class="reponsive-image image-round image-lg"
 													src="../Assests/Images/avatar.jpg"
-													alt=""
+													loading="lazy"
+													alt="avatar"
 												/>
 											</div>
 											<span class="status-badge status-badge-online"> </span>
@@ -271,7 +277,8 @@
 												<img
 													class="reponsive-image image-round image-md"
 													src="../Assests/Images/avatar1.jpg"
-													alt=""
+													loading="lazy"
+													alt="avatar"
 												/>
 											</div>
 											<span class="status-badge status-badge-offline"> </span>
@@ -283,7 +290,8 @@
 												<img
 													class="reponsive-image image-round image-sm"
 													src="../Assests/Images/avatar.jpg"
-													alt=""
+													loading="lazy"
+													alt="badge"
 												/>
 											</div>
 											<span class="status-badge status-badge-away"> </span>
@@ -296,7 +304,8 @@
 													loading="lazy"
 													class="reponsive-image image-round image-xs"
 													src="../Assests/Images/avatar1.jpg"
-													alt=""
+													loading="lazy"
+													alt="badge"
 												/>
 											</div>
 											<span class="status-badge status-badge-online-xs"> </span>
@@ -461,13 +470,14 @@
 											placeholder="name@example.com"
 										/>
 									</div>
-									<div class="form-email form-email-horizontail">
+									<div class="form-email form-email-password">
 										<lable class="form-text-email">Enter password</lable>
 										<input
 											type="password"
 											class="form-text-password"
 											placeholder="enter password here"
 										/>
+										<i class="fas fa-eye showpassword-icon"></i>
 									</div>
 								</div>
 								<div class="form-container">
@@ -547,7 +557,8 @@
 											<img
 												class="image-response"
 												src="https://i.pinimg.com/236x/3b/36/ca/3b36ca3afe0fa0fd4984b9eee2e154bb.jpg"
-												alt=""
+												loading="lazy"
+												alt="card-image"
 											/>
 										</div>
 										<div class="card-description">
@@ -586,14 +597,17 @@
 								<div class="image-container">
 									<img
 										class="background-responsive-image"
-										src="../Assests/Images/Images-background.png"
-										alt="background"
+										src="../Assests/Images/Images-background.jpeg"
+										loading="lazy"
+										alt="background-image"
 									/>
 								</div>
 								<div class="image-container">
 									<img
 										class="background-responsive-image circle-image"
-										src="../Assests/Images/Images-background.png"
+										src="../Assests/Images/Images-background.jpeg"
+										loading="lazy"
+										alt="background-image"
 									/>
 								</div>
 								<div class="code-snipet">
@@ -719,7 +733,8 @@
 											<img
 												class="ver-resposive-image"
 												src="https://assets.myntassets.com/h_720,q_90,w_540/v1/assets/images/14702326/2021/11/25/0f2d7227-2c08-4026-b683-952a75a5a53b1637844226443HRXByHrithikRoshanU-17ActiveBoysBurgundyPrintedRapid-DryAOPT1.jpg"
-												alt=""
+												loading="lazy"
+												alt="product-image"
 											/>
 										</div>
 										<div class="verticalcard-description">
@@ -746,7 +761,8 @@
 											<img
 												class="ver-resposive-image"
 												src="https://assets.myntassets.com/h_720,q_90,w_540/v1/assets/images/14610168/2021/11/25/18fd48b4-1a10-4e2c-b4e8-a7f8e309edc81637841657065NauticaBoysYellowNavyPureCottonBrandLogoNauticalPrintT-shirt1.jpg"
-												alt=""
+												loading="lazy"
+												alt="product-image"
 											/>
 										</div>
 										<div class="verticalcard-description">
@@ -774,7 +790,8 @@
 											<img
 												class="ver-resposive-image"
 												src="https://assets.myntassets.com/h_720,q_90,w_540/v1/assets/images/14610168/2021/11/25/18fd48b4-1a10-4e2c-b4e8-a7f8e309edc81637841657065NauticaBoysYellowNavyPureCottonBrandLogoNauticalPrintT-shirt1.jpg"
-												alt=""
+												loading="lazy"
+												alt="product-image"
 											/>
 										</div>
 										<div class="verticalcard-description">
@@ -805,11 +822,7 @@
 									<code>
 										<iframe
 											src="https://carbon.now.sh/embed?bg=rgba%28248%2C248%2C248%2C1%29&t=one-light&wt=none&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=100px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522componet-container%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522vertical-card%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522ver-card-image%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520class%253D%2522ver-resposive-image%2522%2520src%253D%2522https%253A%252F%252Fassets.myntassets.com%252Fh_720%252Cq_90%252Cw_540%252Fv1%252Fassets%252Fimages%252F14702326%252F2021%252F11%252F25%252F0f2d7227-2c08-4026-b683-952a75a5a53b1637844226443HRXByHrithikRoshanU-17ActiveBoysBurgundyPrintedRapid-DryAOPT1.jpg%2522%2520alt%253D%2522%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522verticalcard-description%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ch4%253EHRX%2520by%2520Santhosh%2520Pemmaka%253C%252Fh4%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%253EBoys%2520Cotton%2520Brand%2520Logo%2520T-shirt%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522ver-card-display-price%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cspan%2520class%253D%2522ver-price%2520discount-price%2522%253ERs.%2520599%253C%252Fspan%253E%2520%253Cspan%2520class%253D%2522ver-price%2520actual-price%2522%253ERs.1199%253C%252Fspan%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cspan%2520class%253D%2522ver-price%2520discount-offer%2522%253E%2850%2525%2520OFF%29%253C%252Fspan%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ca%2520href%253D%2522%2523%2522%2520class%253D%2522card-ver-btn%2520flex-items%2520primary-add-cart%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ci%2520class%253D%2522fas%2520fa-shopping-cart%2520cart-icon%2522%253E%253C%252Fi%253E%2520Add%2520to%2520Cart%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fa%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522card-ver-rating%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%25204.5%2520%253Ci%2520class%253D%2522far%2520fa-star%2522%253E%253C%252Fi%253E%2520%257C%25208%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522vertical-card%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522ver-card-image%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520class%253D%2522ver-resposive-image%2522%2520src%253D%2522https%253A%252F%252Fassets.myntassets.com%252Fh_720%252Cq_90%252Cw_540%252Fv1%252Fassets%252Fimages%252F14610168%252F2021%252F11%252F25%252F18fd48b4-1a10-4e2c-b4e8-a7f8e309edc81637841657065NauticaBoysYellowNavyPureCottonBrandLogoNauticalPrintT-shirt1.jpg%2522%2520alt%253D%2522%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522verticalcard-description%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ch4%253EHRX%2520by%2520Santhosh%2520Pemmaka%253C%252Fh4%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%253EBoys%2520Cotton%2520Brand%2520Logo%2520T-shirt%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522ver-card-display-price%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cspan%2520class%253D%2522ver-price%2520discount-price%2522%253ERs.%2520599%253C%252Fspan%253E%2520%253Cspan%2520class%253D%2522ver-price%2520actual-price%2522%253ERs.1199%253C%252Fspan%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cspan%2520class%253D%2522ver-price%2520discount-offer%2522%253E%2850%2525%2520OFF%29%253C%252Fspan%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ca%2520href%253D%2522%2523%2522%2520class%253D%2522card-ver-btn%2520flex-items%2520"
-											style="
-												border: 0;
-												transform: scale(1);
-												overflow: hidden;
-											"
+											style="border: 0; transform: scale(1); overflow: hidden"
 											sandbox="allow-scripts allow-same-origin"
 										>
 										</iframe>
