improve: hyperlink tag and some css properties.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						</a>
 					</li>
 					<li class="li-tag-header">
-						<a class="a-tag-header" href="./documentation.html" target="_blank">
+						<a class="a-tag-header" href="./documentation.html">
 							<label class="label-name">Documentation</label>
 						</a>
 					</li>
@@ -72,7 +72,7 @@
 							<i class="fab fa-github btn-icon"></i> Github
 						</button>
 					</a>
-					<a href="./documentation.html" target="_blank">
+					<a href="./documentation.html">
 						<button class="btn">Documentation</button>
 					</a>
 				</div>
